# Gazebo

./: .gitignore  Readme.md
install/: local_setup.sh  setup.sh
install/my_sim_tesi_bringup/share/my_sim_tesi_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_sim_tesi_bringup/share/my_sim_tesi_bringup/cmake/: my_sim_tesi_bringupConfig-version.cmake  my_sim_tesi_bringupConfig.cmake
install/my_sim_tesi_bringup/share/my_sim_tesi_bringup/config/: final_simulation_config.rviz  map_scan_config.rviz  nav2_param_config.yaml  ros_gz_bridge_final_config.yaml  ros_gz_bridge_scan_config.yaml  slam_toolbox_config.yaml
install/my_sim_tesi_bringup/share/my_sim_tesi_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/my_sim_tesi_bringup/share/my_sim_tesi_bringup/files/: coordinates_goal.txt
install/my_sim_tesi_bringup/share/my_sim_tesi_bringup/launch/: my_ros2_nodes.launch.py  my_sim_final.launch.py  my_sim_map_scan.launch.py  nav2.launch.py
install/my_sim_tesi_bringup/share/my_sim_tesi_bringup/map/: my_map.pgm  my_map.yaml
install/my_sim_tesi_gazebo/share/launch/: sim_launch.py
install/my_sim_tesi_gazebo/share/models/Depot/: model.sdf
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_Board_01/: model.sdf
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_Carpet_01/: model.config
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_ChairA_01/: model.config  model.sdf
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_Chandelier_01/: model.config  model.sdf
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_CoffeeTable_01/: model.config  model.sdf
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_CookingBench_01/: model.sdf
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_Curtain_01/: model.sdf
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_DeskPortraitA_01/: model.config
install/my_sim_tesi_gazebo/share/models/aws_robomaker_residential_DeskPortraitB_01/: model.config  model.sdf
install/my_sim_tesi_gazebo/share/models/center_table/: model.sdf
install/my_sim_tesi_gazebo/share/my_sim_tesi_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_sim_tesi_gazebo/share/worlds/: my_world_exp1.sdf  my_world_exp3.sdf  my_world_exp4.sdf  small_house.world
install/my_sim_tesi_ros2_interfaces/share/my_sim_tesi_ros2_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_sim_tesi_ros2_nodes/lib/my_sim_tesi_ros2_nodes/: orchestrator_node  pose_control_action_client  pose_control_action_server
install/my_sim_tesi_ros2_nodes/share/my_sim_tesi_ros2_nodes/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/projectH/share/projectH/: package.bash  package.zsh
install/ros2_ignition_thesis/share/ros2_ignition_thesis/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_control/lib/turtlebot3_control/: robot_controller  simple_test  test_movements
install/turtlebot3_control/share/turtlebot3_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_simulation/share/turtlebot3_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/ros2_ignition_thesis/: README.md
src/ros2_ignition_thesis/my_sim_tesi_bringup/: CMakeLists.txt  package.xml
src/ros2_ignition_thesis/my_sim_tesi_bringup/config/: final_simulation_config.rviz  map_scan_config.rviz  nav2_param_config.yaml  ros_gz_bridge_final_config.yaml  ros_gz_bridge_scan_config.yaml  slam_toolbox_config.yaml
src/ros2_ignition_thesis/my_sim_tesi_bringup/files/: coordinates_goal.txt
src/ros2_ignition_thesis/my_sim_tesi_bringup/launch/: my_ros2_nodes.launch.py  my_sim_final.launch.py  my_sim_map_scan.launch.py  nav2.launch.py
src/ros2_ignition_thesis/my_sim_tesi_bringup/map/: my_map.pgm  my_map.yaml
src/ros2_ignition_thesis/my_sim_tesi_gazebo/: CMakeLists.txt
src/ros2_ignition_thesis/my_sim_tesi_gazebo/launch/: sim_launch.py
src/ros2_ignition_thesis/my_sim_tesi_gazebo/worlds/: my_world.sdf  my_world_backup.sdf  my_world_exp1_husky.sdf  my_world_exp2.sdf  my_world_exp3.sdf  my_world_exp4.sdf
src/ros2_ignition_thesis/my_sim_tesi_ros2_interfaces/: CMakeLists.txt
src/ros2_ignition_thesis/my_sim_tesi_ros2_interfaces/action/: DronePoseControl.action
src/ros2_ignition_thesis/my_sim_tesi_ros2_nodes/: CMakeLists.txt
src/ros2_ignition_thesis/my_sim_tesi_ros2_nodes/include/my_sim_tesi_ros2_nodes/: orchestrator_node.hpp  pose_control_action_client.hpp  pose_control_action_server.hpp
src/ros2_ignition_thesis/my_sim_tesi_ros2_nodes/src/: orchestrator_node.cpp  pose_control_action_client.cpp  pose_control_action_server.cpp
src/ros2_ignition_thesis/turtlebot3_control/: package.xml  setup.cfg  setup.py
src/ros2_ignition_thesis/turtlebot3_control/turtlebot3_control/: robot_controller.py  simple_controller.py.save  simple_test.py
src/ros2_ignition_thesis/turtlebot3_simulation/: CMakeLists.txt  package.xml
src/ros2_ignition_thesis/turtlebot3_simulation/launch/: simulation_world1_husky.launch.py  simulation_world3.launch.py  simulation_world4.launch.py  turtlebot3_sim.launch.py
src/ros2_ignition_thesis/turtlebot3_simulation/models/center_table/: model.config  model.sdf
src/ros2_ignition_thesis/turtlebot3_simulation/models/shelf/: model.sdf
src/ros2_ignition_thesis/turtlebot3_simulation/models/turtlebot3_Burger/: model.sdf
src/ros2_ignition_thesis/turtlebot3_simulation/worlds/: my_world_exp1_husky.sdf  my_world_exp2.sdf
(+741 files in other folders)
