<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_sim_tesi_bringup</name>
  <version>0.0.0</version>
  <description>This package contains launch files, config files and static maps</description>
  <maintainer email="marcoagatensi@gmail.com">Marco Agatensi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>slam_toolbox</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_rviz_plugins</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
